--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-markdown": "^10.0.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
+    "rehype-raw": "^7.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.0.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-datepicker": "^6.2.0",
