--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "isbot": "^5.1.17",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
-    "react-datepicker": "^8.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
