--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-markdown": "^10.0.1",
+    "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
     "rehype-raw": "^7.0.0",
