--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
+    "redux-persist": "^6.0.0",
     "rehype-raw": "^7.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -49,6 +50,7 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "@types/redux-persist": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "tailwindcss": "^3.4.16",
